# keyple-c

./: .clang-format  CHANGELOG.md  CMakeLists.txt  README.md
doc/: Doxyfile
feature-circleci/doxygen/: annotated.html  classes.html  dir_000001_000002.html  dir_000003_000002.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_6c83f91069a14abb244e770d3a0dbf72.html  dir_b760e8833492cf0212a0cd0c14be6518.html  dir_b760e8833492cf0212a0cd0c14be6518_dep.map  dir_b760e8833492cf0212a0cd0c14be6518_dep.md5  dir_bedd38f9839fa9504b16ede2933a341c.html  dir_bedd38f9839fa9504b16ede2933a341c_dep.map  dir_bedd38f9839fa9504b16ede2933a341c_dep.md5  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_10.map  inherit_graph_10.md5  inherit_graph_11.map  inherit_graph_11.md5  inherit_graph_12.map  inherit_graph_12.md5  (+35 more)
feature-circleci/doxygen/d0/d83/: struct_t___proxy_reader_f_t.html
feature-circleci/doxygen/d0/d8d/: plugin_mngr_8c.html  plugin_mngr_8c_a02a413f46587fc2790f7520ed187e176_icgraph.map  plugin_mngr_8c_a02a413f46587fc2790f7520ed187e176_icgraph.md5  plugin_mngr_8c_a0443ae17789a6f9fb862bd71a14453c6_cgraph.map  plugin_mngr_8c_a0443ae17789a6f9fb862bd71a14453c6_cgraph.md5  plugin_mngr_8c_a0443ae17789a6f9fb862bd71a14453c6_icgraph.map  plugin_mngr_8c_a0443ae17789a6f9fb862bd71a14453c6_icgraph.md5  plugin_mngr_8c_a0feae7a9e8d706834049fe08acc72952_icgraph.map  plugin_mngr_8c_a0feae7a9e8d706834049fe08acc72952_icgraph.md5  plugin_mngr_8c_a45c4af4c4a5c9b67cbc621448fdcdb03_icgraph.map  plugin_mngr_8c_a45c4af4c4a5c9b67cbc621448fdcdb03_icgraph.md5  plugin_mngr_8c_a55bfc0b0348f0cc5dafdfce7656a6771_icgraph.md5  plugin_mngr_8c_a61e5130cab0ec1a9d45a04d3d9803461_cgraph.md5  plugin_mngr_8c_a61e5130cab0ec1a9d45a04d3d9803461_icgraph.map  plugin_mngr_8c_a61e5130cab0ec1a9d45a04d3d9803461_icgraph.md5  plugin_mngr_8c_a898cafe226eea7a104a1d537396426af_icgraph.map  plugin_mngr_8c_a898cafe226eea7a104a1d537396426af_icgraph.md5  plugin_mngr_8c_af3cc9f9af952cfb6c340091d2a2cf6d0_cgraph.map  plugin_mngr_8c_af3cc9f9af952cfb6c340091d2a2cf6d0_cgraph.md5  plugin_mngr_8c_af3cc9f9af952cfb6c340091d2a2cf6d0_icgraph.md5  plugin_mngr_8c_source.html
feature-circleci/doxygen/d0/d92/: _se_proxy_tester_8cpp.html  _se_proxy_tester_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  _se_proxy_tester_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  _se_proxy_tester_8cpp_a73025e4e967a8ff7372c2d45e468f0c4_cgraph.md5  _se_proxy_tester_8cpp_a73025e4e967a8ff7372c2d45e468f0c4_icgraph.map  _se_proxy_tester_8cpp_a73025e4e967a8ff7372c2d45e468f0c4_icgraph.md5  _se_proxy_tester_8cpp_a891176dcebb4497570058720ffc97c82_cgraph.map  _se_proxy_tester_8cpp_source.html
feature-circleci/doxygen/d0/d9c/: _notifier_reader_8hpp__dep__incl.map  (+1 more)
feature-circleci/doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  files_0.js  files_1.js  files_2.js  (+30 more)
keyple-core/: CMakeLists.txt
keyple-core/include/: keyple.h  keyple_ber_tlv.h  keyple_config_template.h  keyple_errors.h  keyple_log.h  keyple_reader.h  keyple_reader_interface.h  keyple_se_identifiers.h  keyple_serequest.h  keyple_serequest_pool.h  keyple_status.h
keyple-core/src/: keyple.c  keyple_ber_tlv.c  keyple_reader_interface.c  keyple_serequest.c  keyple_serequest_pool.c
keyple-core/templates/: keyple_config_template.h.in
keyple-examples/om27462cdk/: readme.md
keyple-examples/pc_pcsc/: CMakeLists.txt  readme.md
keyple-examples/pc_pcsc/include/: keyple_config.h  log.h  pcsc_readers.h
keyple-examples/pc_pcsc/src/: demo_app_main.c  log.c  pcsc_readers.c
keyple-reader-drivers/pcsc/: pcsc_reader.c  pcsc_reader.h
src/pcscplugin/: osKplMem.c  pcscPlgn.c  pcscPlgn.def  pcscPlgn.h
src/seproxy/: ApduRequest.cpp  ApduRequest.hpp  ApduResponse.cpp  ApduResponse.hpp  ConfigurableReader.hpp  ExecutionStatus.hpp  NotifierReader.hpp  ObservableReader.hpp  ProxyReader.cpp  ProxyReader.hpp  ReaderEvent.hpp  ReaderObserver.hpp  ReadersPlugin.cpp  ReadersPlugin.hpp  SeProxyService.cpp  SeProxyService.hpp  SeRequest.cpp  SeRequest.hpp  SeResponse.cpp  SeResponse.hpp  osKplCfg.h  osKplMem.h  osKplStr.c  osKplStr.h  plugin.h  pluginInterface.h  pluginMngr.c  pluginMngr.h  seProxy.h  seProxyMngr.c  seProxyMngr.def  seProxyMngr.h
src/terminal/: SeProxyTester.cpp
(+383 files in other folders)
